        - Added the `$n->valuation($k)` method, which returns the number of times `$n` is divisible by `$k`.
        - Extended the method `float` to accept an optional argument with the number of bits of precision.
        - Added the `$x->bfloat` method, which truncates `$x` in-place to a floating-point value.
        - Added the `(b)fmod` and `(b)fpow` floating-point methods.
        - New method: `$n->is_pow($k)`, which returns true iff `a^k = n` for some positive integer `a`.
        - Some minor bug-fixes and documentation improvements.

0.10    2016-17-08
        - Faster creation of MPFR objects from scalar integer values.
        - Conversion of scalar values to MPFR objects is done more strictly, by validating each conversion.
        - Added the missing `[b|i]mul` methods in the `Nan` class.
        - Minor overall performance improvements, by taking advantage of some commutative properties.
        - Added the `bln()` method, which calculates the natural logarithm in-place.
        - Stricter definitions for the `log` and `blog` methods when one of the arguments is +/-Infinity.
        - Require Math::GMPz >= 0.39 (for Rmpz_bin_si).
        - Use Math::GMPq's (>=0.41) `_ulong_max()` and `_long_min()` to determine the integer limits.

0.09    2016-15-08
        - Better support for scalar values.
        - Better performance for `idiv()` and `bidiv()` when called with negative scalar integers.
        - Faster creation of Math::BigNum objects with scalar integer values.
        - Scalar values passed to `(b)i*` methods are now validated or converted correspondingly.

0.08    2016-13-08
        - Added support for `+inf`, `-inf` and `nan`, each represented as a scalar value.
        - Improved the support for infinity to work with any numerical object and any special scalar values.

0.07    2016-06-08
        - Fixed a critical bug in the stringification of very small floating-point values

0.06    2016-06-08